# api-project-seed

./: .env.prod  .gitignore  README.md  app.py  pyproject.toml
api/: __init__.py
api/common/: db.py  error_handlers.py  errors.py
api/models/: todo.py
api/routes/: idea.py  todo.py
api/schemas/: idea.py  todo.py
api/services/: boredapi.py
templates/: swagger.html
